--- a/基础.Vue/状态管理.Pinia.md
+++ b/基础.Vue/状态管理.Pinia.md
@@ -19,10 +19,10 @@
 
 **Define Store 定义**
 
-- id 
-- state 等同于 ref() - 定义数据
-- getters 等同于 computed - 计算属性
-- actions - 等同于 function - 方法
+- `id`
+- `state`等同于`ref()` - 定义数据
+- `getters`等同于`computed` - 计算属性
+- `actions`等同于`function` - 方法
 ```
     <!-- @/store/modules/counter.ts -->
 
